--- a/jside.htm
+++ b/jside.htm
@@ -20,7 +20,7 @@ html, body {
 	color: #222;
 }
 #toolbar div {
-	font:400 12pt Roboto;
+	font:400 12pt Roboto, Tahoma, sans-serif;
 	height: 100%;
 	padding: 6px;
 	cursor: pointer;
@@ -32,7 +32,7 @@ html, body {
 }
 #editor {
 	margin: 0px;
-	font: 800 10pt "xos4 Terminus", Consolas, monospace;
+	font: 800 10pt "xos4 Terminus", Iosevka, Consolas, monospace;
 	padding: 8px;
 	height: calc(100% - 172px);
 	width: 100%;
@@ -45,7 +45,7 @@ html, body {
 #log {
 	height: 140px;
 	width: 100%;
-	font: 400 10pt Cousine, monospace;
+	font: 400 10pt Iosevka, Cousine, monospace;
 	padding: 8px;
 	overflow-y: scroll;
 	background: #222;
