--- a/index.htm
+++ b/index.htm
@@ -98,7 +98,7 @@
 			}
 			var footer = document.createElement('div');
 			footer.className = 'footer';
-			footer.innerHTML = markRwd(page.posts[i].info);
+			footer.innerHTML = markRwd(page.footer);
 			document.body.appendChild(footer);
 		}
 
