--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
 			  color: inherit;
 			  font-size: 1.5em;
 			}
-			.postinfo, .footer {
+			.postinfo {
 			  margin: 8px  0 4px;
 			  padding: 0;
 			  color: #888;
@@ -52,6 +52,11 @@
 			.taglink {
 			  color: #a60;
 			  margin-left: 8px;
+			}
+			.footer {
+				text-align: center;
+				color: #444;
+				margin: 16px 0;
 			}
 		</style>
 	</head>
