JSIDE improvements and fixes

--- a/index.htm
+++ b/index.htm
@@ -4,69 +4,18 @@
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>JJJS</title>
-		<style>
-		  html {
-		    background: #000;
-		  }
-			body {
-				font: 400 10pt "Iosevka", sans-serif;
-				max-width: 800px;
-				margin: 0 auto;
-				color: #FFF;
-			}
-			h1 {
-			  padding: 0;
-			  margin: 16px;
-			}
-			h1 a {
-			  color: inherit;
-			}
-			.postblock {
-			  background: #222;
-			  padding: 12px;
-			  margin: 8px;
-			  color: #FFF;
-			}
-			.postlink {
-			  color: inherit;
-			  font-size: 1.5em;
-			}
-			.postinfo {
-			  margin: 8px  0 4px;
-			  padding: 0;
-			  color: #888;
-			}
-			.postinfo a, .footer a {
-			  text-decoration: none;
-			  font-weight: bold;
-			  color: #FFF;
-			}
-			.tagblock {
-			  background: rgba(0, 0, 0, 0.5);
-			  padding: 8px 12px 12px;
-			  margin: -12px;
-			  text-align: right;
-			  float: right;
-			  min-width: 200px;
-			}
-			.taglink {
-			  color: #a60;
-			  margin-left: 8px;
-			}
-			.footer {
-				text-align: center;
-				color: #444;
-				margin: 16px 0;
-			}
-		</style>
+		<link rel='stylesheet' type='text/css' href='main.css'>
 	</head>
 	<body>
+		<h1>Oops</h1>
+		<p>It seems you're using javascript incapable browser. Proceed <a href='i.use.lynx.html'>here</a> for decent HTML 3.0 page.</p>
 	</body>
 	<script type='text/javascript'>
 	  function markRwd(text){
 	    return text.replace(/([^\s>]*)>>([^\s]*)/g,'<a href="$2">$1</a>');
 	  }
 		function renderPage(page){
+		  document.body.innerHTML = '';
 		  var tagged = '';
 		  if(location.href.indexOf('?') != -1){
 		    tagged = location.href.substr(location.href.indexOf('tagged=') + 7);
