--- a/jside.htm
+++ b/jside.htm
@@ -2,7 +2,7 @@
 <head>
 <title>JSIDE</title>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=480,user-scalable=false" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
 	-moz-box-sizing: border-box;
